# confinit

./: Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: annotated_decoder.py  cli_source.py  collections_from_env.py  errors_and_debugging.py  precedence.py  prefix_and_dotenv.py  quickstart.py  secrets.py  toml_and_types.py
examples/full_app/: .env  README.md  app.py  config.toml
scripts/: bench.py
src/confinit/: __init__.py  convert.py  errors.py  loader.py  sources.py  types.py
tests/: test_conversion_and_errors.py  test_convert_collections_and_annotated.py  test_loader_precedence.py  test_loader_secret_masking.py  test_sources_cli.py  test_types_secret.py  test_version.py
